--- a/app/src/main/res/layout/activity_information_word.xml
+++ b/app/src/main/res/layout/activity_information_word.xml
@@ -34,9 +34,9 @@
         android:id="@+id/imageView"
         android:layout_width="101dp"
         android:layout_height="26dp"
-        android:layout_marginStart="16sp"
-        android:layout_marginLeft="16sp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="277sp"
         android:layout_marginRight="277sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -144,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="41dp"
         android:layout_marginLeft="41dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="54dp"
         android:layout_marginEnd="302dp"
         android:layout_marginRight="302dp"
         android:text="오늘의 퀴즈"
@@ -152,8 +152,9 @@
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/view1" />
 
     <Button
         android:id="@+id/button"
